<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_gl_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".20"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_gl_41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".40"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_gl_61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".60"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_gl_81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".80"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8508892" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_gl65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_gl35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_gl63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".63"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_gl60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50"/>

    <ImageView
        android:id="@+id/imspaces"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:src="@drawable/spaces"
        app:layout_constraintBottom_toTopOf="@id/h_gl40"
        app:layout_constraintStart_toEndOf="@id/v_gl_21"/>
    <TextView
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/spaces"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/h_gl40"
        app:layout_constraintStart_toEndOf="@id/v_gl_21"/>
    <ImageView
        android:id="@+id/imflights"
        android:layout_width="75sp"
        android:layout_height="75dp"
        android:src="@drawable/flights"
        app:layout_constraintBottom_toTopOf="@id/h_gl40"
        app:layout_constraintStart_toEndOf="@id/v_gl_41"/>
    <TextView
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/flights"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/h_gl40"
        app:layout_constraintStart_toEndOf="@id/v_gl_41"/>
    <ImageView
        android:layout_width="75sp"
        android:layout_height="75dp"
        android:src="@drawable/rovers"
        app:layout_constraintBottom_toTopOf="@id/h_gl40"
        app:layout_constraintStart_toEndOf="@id/v_gl_61"/>
    <EditText
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/rovers"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/h_gl40"
        app:layout_constraintStart_toEndOf="@id/v_gl_61"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="180sp"
        android:text="@string/dca"
        android:textSize="30sp"
        android:background="#9A6FF1"
        android:padding="50sp"
        app:layout_constraintBottom_toTopOf="@id/h_gl75"
        app:layout_constraintTop_toBottomOf="@+id/h_gl50"
        app:layout_constraintEnd_toStartOf="@+id/v_gl_41"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="180sp"
        android:text="@string/mars"
        android:textSize="30sp"
        android:background="#9A6FF1"
        android:padding="50sp"
        app:layout_constraintBottom_toTopOf="@id/h_gl70"
        app:layout_constraintTop_toBottomOf="@+id/h_gl55"
        app:layout_constraintStart_toEndOf="@id/v_gl_61"/>

    <TextView
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:text="-"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:background="#FDD835"
        app:layout_constraintBottom_toTopOf="@id/h_gl70"
        app:layout_constraintStart_toEndOf="@id/v_gl35"/>

    <Button
        android:id="@+id/btndca"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:text="@string/d"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:backgroundTint="#D81B60"
        app:layout_constraintStart_toEndOf="@id/v_gl35"
        app:layout_constraintBottom_toTopOf="@id/h_gl63"/>
    <Button
        android:id="@+id/btnmars"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:text="@string/m"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:backgroundTint="#D81B60"
        app:layout_constraintStart_toEndOf="@id/v_gl60"
        app:layout_constraintBottom_toTopOf="@id/h_gl70"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneway"
        android:background="#00ACC1"
        android:textSize="30sp"
        android:paddingRight="60sp"
        app:layout_constraintBottom_toTopOf="@+id/h_gl81"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/traveller"
        android:background="#00ACC1"
        android:textSize="30sp"
        android:padding="10sp"
        app:layout_constraintBottom_toTopOf="@id/h_gl91"/>


</androidx.constraintlayout.widget.ConstraintLayout>